<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".RegistroActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/regTexto" />

    <EditText
        android:id="@+id/editTexEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/correo"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck"
        tools:layout_editor_absoluteY="181dp" />

    <TextView
        android:id="@+id/TiCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="@string/regCorreo" />

    <TextView
        android:id="@+id/TiPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/regPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTexEmailAddress" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TiPass"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/TiSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/regTitSex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <RadioGroup
        android:id="@+id/setSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/TiSexo"
        tools:layout_editor_absoluteX="152dp"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/btnH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regSex1" />

        <RadioButton
            android:id="@+id/btnM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regSex2"
            tools:layout_editor_absoluteX="174dp"
            tools:layout_editor_absoluteY="447dp" />

    </RadioGroup>

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="88dp"
        android:text="@string/Boton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

</androidx.constraintlayout.widget.ConstraintLayout>